--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
     <h1>Welcome to the Ontario G1 practice website!</h1>
 
     <form action="/" method="post">
-      <button class="begin-button" type="submit">↠ start ↞</button>
+      <button style="display: none" id="resume-button" class="begin-button" type="submit" value="1" name="resume">↠
+        resume
+        ↞</button>
+      <button class="begin-button" type="submit">↠ start
+        <span id="start-anew-text" style="display: none"> anew </span>
+        ↞</button>
+      <p><small>Progress is saved on this device</small></p>
       <a href="review-wrong.html" id="review-wrong-button" class="begin-button" style="display: none">! review wrong
         answers !</a>
     </form>
@@ -37,6 +43,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="public/storage.js" type="application/javascript"></script>
+  <script src="public/home.js"></script>
   <script>
     const store = new AnswersStore();
     const wronglyAnswered = store.getWronglyAnswered();
