--- a/test.html
+++ b/test.html
@@ -103,8 +103,8 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  <script src="storage.js"></script>
-  <script src="game.js"></script>
+  <script src="/public/storage.js" type="application/javascript"></script>
+  <script src="/public/game.js" type="application/javascript"></script>
 
   <footer>
     <small>
