--- a/public/test.html
+++ b/public/test.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <title>Ontario G1 Practice Test</title>
-  <link rel="stylesheet" href="game.css">
+  <link rel="stylesheet" href="/css/game.css">
   </link>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Muli:wght@500;600;700;800&display=swap" rel="stylesheet">
@@ -95,16 +95,16 @@
       <p id="total"></p>
     </div>
 
-    <form class="" action="/game" method="post">
+    <div>
       <a href="index.html"><button type="submit" class="try-again">↠ try again ↞</button></a>
-    </form>
+    </div>
 
   </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  <script src="/public/storage.js" type="application/javascript"></script>
-  <script src="/public/game.js" type="application/javascript"></script>
+  <script src="/js/storage.js" type="application/javascript"></script>
+  <script src="/js/game.js" type="application/javascript"></script>
 
   <footer>
     <small>
