--- a/public/review-wrong.html
+++ b/public/review-wrong.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <title>Ontario G1 Practice Test</title>
-  <link rel="stylesheet" href="home.css">
-  <link rel="stylesheet" href="game.css">
+  <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/game.css">
   </link>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Muli:wght@500;600;700;800&display=swap" rel="stylesheet">
@@ -21,8 +21,8 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  <script src="storage.js" type="application/javascript"></script>
-  <script src="review-wrong.js" type="application/javascript"></script>
+  <script src="/js/storage.js" type="application/javascript"></script>
+  <script src="/js/review-wrong.js" type="application/javascript"></script>
 
 </body>
 
