--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="/js/storage.js" type="application/javascript"></script>
-  <script src="/js/home.js"></script>
+  <script src="/js/index.js"></script>
 
 </body>
 
