--- a/test.html
+++ b/test.html
@@ -104,7 +104,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <script src="/js/storage.js" type="application/javascript"></script>
-  <script src="/js/game.js" type="application/javascript"></script>
+  <script src="/js/test.js" type="application/javascript"></script>
 
   <footer>
     <small>
