--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <h1>Welcome to the Ontario G1 practice website!</h1>
 
     <div id="start-options">
-      <div>
-        <a role="button" id="resume-button" class="focus-button" style="display: none" href="/test.html?resume">↠ resume
+      <div id="resume" class="hidden">
+        <a role="button" class="focus-button" href="/test.html?resume">↠ resume
           ↞</a>
         <div class="caption">
           <p><small>Resume from saved progress</small>
@@ -31,9 +31,9 @@
         </div>
       </div>
 
-      <div>
+      <div id="start-anew">
         <a role="button" class="focus-button" href="/test.html">↠ start
-          <span id="start-anew-text" style="display: none"> anew </span>↞</a>
+          <span id="start-anew-text" class="hidden"> anew </span>↞</a>
         <div class="caption">
           <p><small>Progress is saved on this device. </small>
           </p>
@@ -41,8 +41,8 @@
         </div>
       </div>
 
-      <div>
-        <a href="review-wrong.html" id="review-wrong-button" class="focus-button" style="display: none">! review !</a>
+      <div id="review-wrong" class="hidden">
+        <a href="review-wrong.html" class="focus-button">↞ review ↞ </a>
         <div class="caption">
           <p><small>Review your mistakes</small>
           </p>
