select answer with option text

--- a/test.html
+++ b/test.html
@@ -43,27 +43,27 @@
     <p id="question-p"></p>
 
     <div class="answer">
-      <input class="default-check" type="radio" name="answers" value="one">
+      <input id="option-one" class="default-check" type="radio" name="answers" value="one">
       <span class="check"></span>
-      <label id="one" for="one"></label>
+      <label id="one" for="option-one"></label>
     </div>
 
     <div class="answer">
-      <input class="default-check" type="radio" name="answers" value="two">
+      <input id="option-two" class="default-check" type="radio" name="answers" value="two">
       <span class="check"></span>
-      <label id="two" for="two"></label>
+      <label id="two" for="option-two"></label>
     </div>
 
     <div class="answer">
-      <input class="default-check" type="radio" name="answers" value="three">
+      <input id="option-three" class="default-check" type="radio" name="answers" value="three">
       <span class="check"></span>
-      <label id="three" for="three"></label>
+      <label id="three" for="option-three"></label>
     </div>
 
     <div class="answer">
-      <input class="default-check" type="radio" name="answers" value="four">
+      <input id="option-four" class="default-check" type="radio" name="answers" value="four">
       <span class="check"></span>
-      <label id="four" for="four"></label>
+      <label id="four" for="option-four"></label>
     </div>
 
   </section>
