ask when there is a save but no resume specified

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="caption">
           <p><small>Progress is saved on this device. </small>
           </p>
-          <p><small>Note: removes previous progress</small></p>
+          <p><small>Note: removes previous save</small></p>
         </div>
       </div>
 
